--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-Deployment
+  name: nginx-deployment
   labels:
     app: nginx
 spec:
@@ -9,13 +9,13 @@ spec:
   selector:
     matchLabels:
       app: nginx
-    template:
-      metadata:
-        labels:
-          app: nginx
-      spec:
-        containers:
-          - name: nginx
-        image: nxinx:1.16
-        ports:
-          - containerPort: 80
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.16
+          ports:
+            - containerPort: 8080
